fix signup button clipping

--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -40,6 +40,7 @@
 }
 
 .login-email {
+  outline: none;
   position: absolute;
   width: 59%;
   height: 11.4%;
@@ -56,6 +57,7 @@
 }
 
 .login-password {
+  outline: none;
   position: absolute;
   width: 59%;
   height: 11.4%;
@@ -165,12 +167,12 @@
   }
 
   .button-name-login {
-    font-size: 17.1429px;
+    font-size: 20px;
   }
 
   .sign-up {
     position: absolute;
-    bottom: 14%;
+    bottom: 5%;
     right: 15%;
 
     font-size: 20px;
